@@ -1,5 +1,7 @@
 DIST uniconvertor-1.1.2.tar.gz 525780 RMD160 d492cfd8325950e514ef9cbfea31f346b17599b1 SHA1 ab72415823b1fb7f0f65ca00b361d2ef69b105c1 SHA256 958ee6b041ed61ac81707102684f25d201f51e336d571121458a683e0ad6189e
 DIST uniconvertor-1.1.3.tar.gz 533295 RMD160 a9d708b4c9d0615eb22a592b26b35ecda597241f SHA1 7ac89f086312e133b261c43a5de34733cf4a38d5 SHA256 0831f1091a76844abb7102e5499d51f3e4c79074df952a392d1002030df104f0
+DIST uniconvertor-1.1.4.tar.gz 536477 RMD160 35613ec20b70db79dd82c7127d8e54ad49fec4fc SHA1 23afe06db9c34060418619d880c2eb70141e9abe SHA256 ff80b194d85da107d9c2e22742b59986c434fdd377aff66b954577437d3c7182
 EBUILD uniconvertor-1.1.2.ebuild 684 RMD160 8f6ccaefd3656db6fbb8babec71cadffcc65c058 SHA1 c8e2d3490b056617ce1cc39169cd4ddb82466b6b SHA256 ec8c15e586c3594ae63e22f9f5ee3cc96b3e793d00d685ee629dc8c7f6ec474c
 EBUILD uniconvertor-1.1.3.ebuild 684 RMD160 8f6ccaefd3656db6fbb8babec71cadffcc65c058 SHA1 c8e2d3490b056617ce1cc39169cd4ddb82466b6b SHA256 ec8c15e586c3594ae63e22f9f5ee3cc96b3e793d00d685ee629dc8c7f6ec474c
-MISC ChangeLog 349 RMD160 e5382b0eebf075f545f4fd42ef99bbf8f2be0e02 SHA1 6f568a2578870b9a88936dfbd05452badd2e50bd SHA256 e05a2174172a22e7223a2d08dac380f27c88ced43ad81e1b30aeba3e04a63a9f
+EBUILD uniconvertor-1.1.4.ebuild 684 RMD160 cf348eaedc51d8c12678c1e03eddc05ea12fecb0 SHA1 0a77714ca759d9e9e1d18988e74db4cb8d5cfc21 SHA256 946cac84b7fa2a72d5d594da4e1efe46ba1c45491587d00a0fea8d8439da8125
+MISC ChangeLog 437 RMD160 33b9d416ac5787c0506c89332156f0ddad466a5b SHA1 521992574eace96f2fb23e77a8f9c3d5e7e6f441 SHA256 355f0987aa2cc0591474044cc1fd946e22613c4bd22b913182af356642d3ebb5
